+ Added Instant Win if no mobs were collected + Added @SuppressWarnings for SameReturnValue